# FullTimeApi

./: README.md  pyproject.toml
full_time_api/: __init__.py  client.py  date_types.py  division.py  fixture_groups.py  fixtures.py  helpers.py  results.py  team_fixtures.py  teams.py  xpath_helpers.py
full_time_api/formatters/: __init__.py  fixture_formatter.py  result_formatter.py
tests/: test_formatters.py
