[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "full-time-api"
version = "1.0.1"
description = "A simple tool to help obtain fixture information from the FA Full-Time system."
readme = "README.md"
license = { text = "MIT" }
keywords = ["Football Association", "Football", "API", "Football Fixtures", "Football Results"]
authors = [
    { name = "Michele Roscelli", email = "mcr1893@gmail.com" }
]
maintainers = [
    { name = "Michele Roscelli", email = "mcr1893@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/mik1893/FullTimeApi"
Documentation = "https://github.com/mik1893/FullTimeApi"
Repository = "https://github.com/mik1893/FullTimeApi"
Issues = "https://github.com/mik1893/FullTimeApi/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["full_time_api*"]
